Create a Controller and Date Handlers

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
             <input id="price" type="number" class="form-control"  min="0.01" step="0.01" value="0.0" required />
         </div>
         
-        <button class="btn btn-primary"  type="button">Isert</button>
+        <button class="btn btn-primary"  type="submit">Insert</button>
     </form>
     
     <div class="text-center">
@@ -58,18 +58,8 @@
         <tfoot>
         </tfoot>
     </table>
-    <script src="app/models/trading/Trading.js"></script>
-    <script>
-        const tradingParams = {
-            date: new Date(),
-            price: 5,
-            quantity: 20
-        }
-        let n1 = new Trading(tradingParams);
-        let amount = n1.amount;
-        console.log(n1.date);
-        console.log(n1.price);
-        console.log(amount)
-    </script>
+    <script src="app/models/Trading.js"></script>
+    <script src="app/controllers/TradingController.js"></script>
+    <script src="app/app.js"></script>
 </body>
 </html>
