--- a/client/index.html
+++ b/client/index.html
@@ -61,5 +61,6 @@
     <script src="app/models/Trading.js"></script>
     <script src="app/controllers/TradingController.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/ui/converters/DateConverter.js"></script>
 </body>
 </html>
